--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Резюме веб-разработчика</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Russo+One|Pacifico|Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -21,7 +18,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
 
-  <nav class="navbar" role="navigation">
+  <nav class="navbar">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -47,10 +44,13 @@
         <!-- TODO: replace p -->
         ВЕБ-РАЗРАБОТЧИК<p class="header_name">Алена Митрофанова</p>
       </div>
+      <div class="col-sm-12 header_contacts">
+        <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+      </div>
     </div>
   </header>
 
-  <div class="container main">
+  <main class="container">
     <div class="row">
 
       <div class="col-xs-12 section_title">Обо мне<hr></div>
@@ -173,13 +173,13 @@
       </section>
 
     </div> <!--row-->
-  </div> <!--container-->
+  </main> <!--container-->
 
   <div class="hire">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-xs-12 left">Я ищу работу</div>
-        <div class="col-md-6 col-xs-12 right" data-toggle="modal" data-target="#modal"><span>Связаться со мной</span></div>
+        <div class="col-sm-6 col-xs-12 left">Я ищу работу</div>
+        <div class="col-sm-6 col-xs-12 right" data-toggle="modal" data-target="#modal"><span>Связаться со мной</span></div>
       </div>
     </div>
   </div>
@@ -207,8 +207,8 @@
 
   <footer class="container">
     <div class="row">
-      <div class="col-md-6 col-xs-12 footer_left">Создание сайта: <i>Алена Митрофанова</i></div>
-      <div class="col-md-6 col-xs-12 footer_right">2017</div>
+      <div class="col-sm-6 col-xs-12 footer_left">Создание сайта: <i>Алена Митрофанова</i></div>
+      <div class="col-sm-6 col-xs-12 footer_right">2017</div>
     </div>
   </footer>
 </body>
