--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         ВЕБ-РАЗРАБОТЧИК<p class="header_name">Алена Митрофанова</p>
       </div>
       <div class="col-sm-12 header_contacts">
-        <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+
       </div>
     </div>
   </header>
@@ -208,7 +208,11 @@
   <footer class="container">
     <div class="row">
       <div class="col-sm-6 col-xs-12 footer_left">Создание сайта: <i>Алена Митрофанова</i></div>
-      <div class="col-sm-6 col-xs-12 footer_right">2017</div>
+      <div class="col-sm-6 col-xs-12 footer_right">
+        <a href="https://t.me/lucubratiuncula"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
+        <a href="mailto:mittralena@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/amitrofanova/amitrofanova.github.io"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+      </div>
     </div>
   </footer>
 </body>
