fix animateSkills by adding persents to val

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="skill" text="Git"><span id="git_skill"><span>Git</span></span></div>
         <div class="skill" text="Bootstrap"><span id="bs_skill"><span>Bootstrap</span></span></div>
         <div class="skill" text="Photoshop"><span id="ps_skill"><span>Photoshop</span></span></div>
-        <div class="skill" text="Emmet"><span id="emmet_skill"><span>Emmet</span></span></div>
+        <div class="skill hidden-xs" text="Emmet"><span id="emmet_skill"><span>Emmet</span></span></div>
         <div class="skill" text="Less"><span id="less_skill"><span>Less</span></span></div>
-        <div class="skill" text="PHP"><span id="php_skill"><span>PHP</span></span></div>
+        <div class="skill hidden-xs" text="PHP"><span id="php_skill"><span>PHP</span></span></div>
         <div class="skill" text="Ajax"><span id="ajax_skill"><span>Ajax</span></span></div>
         <div class="skill" text="SQL"><span id="sql_skill"><span>SQL</span></span></div>
         <div class="skill" text="AngularJS"><span id="angular_skill"><span>AngularJS</span></span></div>
