added navbar-scrolled class

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="navbar-brand visible-xs">Алена Митрофанова<hr><div class="navbar-brand_title">Веб-разработчик</div></div>
+        <div class="navbar-brand">Алена Митрофанова<hr><div class="navbar-brand_title">Веб-разработчик</div></div>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -53,8 +53,8 @@
   <main class="container">
     <div class="row">
 
-      <div class="col-xs-12 section_title">Обо мне<hr></div>
-      <section class="col-xs-12 section about">
+      <div class="col-xs-12 section_title about">Обо мне<hr></div>
+      <section class="col-xs-12 section">
         <p>Привет! Меня зовут Алена. Я начинающий фронтэнд-разработчик из Тюмени. Веб-разработка - это то, что мне действительно интересно, по-моему это творческий и увлекательный процесс. Я получила специальность "математик-программист" в Тюменском государственном университете и сейчас хочу стать частью сильной команды, чтобы создавать красивые и качественные сайты.</p>
       </section>
 
