added eng version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
 
+
   <nav class="navbar">
+    <div class="lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -43,9 +45,6 @@
       <div class="col-sm-12 header_title">
         <!-- TODO: replace p -->
         ВЕБ-РАЗРАБОТЧИК<p class="header_name">Алена Митрофанова</p>
-      </div>
-      <div class="col-sm-12 header_contacts">
-
       </div>
     </div>
   </header>
