--- a/index_en.html
+++ b/index_en.html
@@ -19,6 +19,7 @@
 <body data-spy="scroll" data-target=".navbar">
 
   <nav class="navbar">
+    <div class="lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -55,7 +56,6 @@
 
       <div class="col-xs-12 section_title about">About me<hr></div>
       <section class="col-xs-12 section">
-        <p>Привет! Меня зовут Алена. Я начинающий фронтэнд-разработчик из Тюмени. Веб-разработка - это то, что мне действительно интересно, по-моему это творческий и увлекательный процесс. Я получила специальность "математик-программист" в Тюменском государственном университете и сейчас хочу стать частью сильной команды, чтобы создавать красивые и качественные сайты.</p>
         <p>Hi! My name is Alena. I'm junior web developer from Tyumen. I'm very interested in web development. It's not just a job but a passion that I grow every day. I want to be a part of the strong team to create clean, elegant front-end code..</p>
       </section>
 
