--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <nav class="navbar">
-    <div class="lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
+    <div class="hidden-xs lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
