fixed collapse menu

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#skills_section">Навыки</a></li>
-          <li><a href="#portfolio_section">Портфолио</a></li>
-          <li><a href="#experience_section">Опыт работы</a></li>
+          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#skills_section">Навыки</a></li>
+          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#portfolio_section">Портфолио</a></li>
+          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#experience_section">Опыт работы</a></li>
         </ul>
       </div>
     </div>
