added link to return to top

--- a/index_en.html
+++ b/index_en.html
@@ -37,9 +37,10 @@
         </ul>
       </div>
     </div>
+    <div class="hidden-xs to-top"><a href="#top"><i class="fa fa-arrow-circle-up fa-2x" aria-hidden="true"></i></a></div>
   </nav>
 
-  <header class="container hidden-xs">
+  <header class="container hidden-xs" id="top">
     <div class="row">
       <div class="col-sm-12 header_title">
         <!-- TODO: replace p -->
