added animation on page loading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
 
+  <div id="overlay"></div>
 
   <nav class="navbar">
     <div class="hidden-xs lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
@@ -76,7 +77,7 @@
         <div class="skill" text="JSON"><span id="json_skill"><span>JSON</span></span></div>
       </section>
 
-<!-- TODO: slides for mobile -->
+      <!-- TODO: slides for mobile -->
       <div class="col-xs-12 section_title" id="portfolio_section">Портфолио<hr></div>
       <section class="col-xs-12 section portfolio">
         <div class="row preview">
@@ -215,5 +216,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
