--- a/app/index_en.html
+++ b/app/index_en.html
@@ -4,21 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Резюме веб-разработчика</title>
+  <title>Web Developer CV</title>
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Pacifico|Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="css/animate.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <script src="js/wow.js"></script>
-  <script src="js/script.js"></script>
+  <link href="assets/styles/app.css" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".navbar">
 
-  <div id="overlay"></div>
+<body data-spy="scroll" data-target=".navbar">
 
   <nav class="navbar">
     <div class="hidden-xs lang"><a href="index_en.html">en</a> &vert; <a href="index.html">ru</a></div>
@@ -29,13 +25,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="navbar-brand">Алена Митрофанова<hr><div class="navbar-brand_title">Веб-разработчик</div></div>
+        <div class="navbar-brand">Alena Mitrofanova<hr><div class="navbar-brand_title">WEB DEVELOPER</div></div>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#skills_section">Навыки</a></li>
-          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#portfolio_section">Портфолио</a></li>
-          <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#experience_section">Опыт работы</a></li>
+          <li><a href="#skills_section">Skills</a></li>
+          <li><a href="#portfolio_section">Portfolio</a></li>
+          <li><a href="#experience_section">Experience</a></li>
         </ul>
       </div>
     </div>
@@ -46,7 +42,10 @@
     <div class="row">
       <div class="col-sm-12 header_title">
         <!-- TODO: replace p -->
-        ВЕБ-РАЗРАБОТЧИК<p class="header_name">Алена Митрофанова</p>
+        WEB DEVELOPER<p class="header_name">Alena Mitrofanova</p>
+      </div>
+      <div class="col-sm-12 header_contacts">
+
       </div>
     </div>
   </header>
@@ -54,12 +53,12 @@
   <main class="container">
     <div class="row">
 
-      <div class="col-xs-12 section_title about">Обо мне<hr></div>
+      <div class="col-xs-12 section_title about">About me<hr></div>
       <section class="col-xs-12 section">
-        <p>Привет! Меня зовут Алена. Я начинающий фронтэнд-разработчик из Тюмени. Веб-разработка - это то, что мне действительно интересно, по-моему это творческий и увлекательный процесс. Я получила специальность "математик-программист" в Тюменском государственном университете и сейчас хочу стать частью сильной команды, чтобы создавать красивые и качественные сайты.</p>
+        <p>Hi! My name is Alena. I'm junior web developer from Tyumen. I'm very interested in web development. It's not just a job but a passion that I grow every day. I want to be a part of the strong team to create clean, elegant front-end code..</p>
       </section>
 
-      <div class="col-xs-12 section_title" id="skills_section">Навыки<hr></div>
+      <div class="col-xs-12 section_title" id="skills_section">Skills<hr></div>
       <section class="col-xs-12 section">
         <div class="skill" text="HTML"><span id="html_skill"><span>HTML</span></span></div>
         <div class="skill" text="CSS"><span id="css_skill"><span>CSS</span></span></div>
@@ -77,97 +76,99 @@
         <div class="skill" text="JSON"><span id="json_skill"><span>JSON</span></span></div>
       </section>
 
-      <!-- TODO: slides for mobile -->
-      <div class="col-xs-12 section_title" id="portfolio_section">Портфолио<hr></div>
+<!-- TODO: slides for mobile -->
+      <div class="col-xs-12 section_title" id="portfolio_section">Portfolio<hr></div>
       <section class="col-xs-12 section portfolio">
         <div class="row preview">
           <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="preview-inner" onclick="openModal();currentSlide(1)">
               <div class="description">
-                <div class="work">Частная поликлиника</div>
-                <div class="role">Верстка</div>
+                <div class="work">Private hospital</div>
+                <div class="role">Front-End Development</div>
               </div>
             </div>
           </div>
         </div>
 
-        <div id="gallery" class="modal">
-          <span class="close cursor" onclick="closeModal()">&times;</span>
+				<div id="gallery" class="modal">
+          <span class="close cursor">&times;</span>
           <div class="modal-content">
-            <img src="images/FireShot/FireShot1.png" class="slides">
-            <img src="images/FireShot/FireShot2.png" class="slides">
-            <img src="images/FireShot/FireShot4.png" class="slides">
-            <img src="images/FireShot/FireShot3.png" class="slides">
-            <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
-            <div class="next" onclick="plusSlides(1)">&#10095;</div>
 
-            <div class="row preview">
+            <img src="assets/images/FireShot1.png" class="slides">
+            <img src="assets/images/FireShot2.png" class="slides">
+            <img src="assets/images/FireShot3.png" class="slides">
+            <img src="assets/images/FireShot4.png" class="slides">
+            <div class="prev">&#10094;</div>
+            <div class="next">&#10095;</div>
+
+						<div class="row preview">
               <div class="col-xs-12 col-sm-3">
-                <div class="modal-preview"><img src="images/FireShot/FireShot1.png" onclick="currentSlide(1)"></div>
+                <div class="modal-preview"><img src="assets/images/FireShot1.png"></div>
               </div>
               <div class="col-xs-12 col-sm-3">
-                <div class="modal-preview"><img src="images/FireShot/FireShot2.png" onclick="currentSlide(2)"></div>
+                <div class="modal-preview"><img src="assets/images/FireShot2.png"></div>
               </div>
               <div class="col-xs-12 col-sm-3">
-                <div class="modal-preview"><img src="images/FireShot/FireShot4.png" onclick="currentSlide(3)"></div>
+                <div class="modal-preview"><img src="assets/images/FireShot3.png"></div>
               </div>
               <div class="col-xs-12 col-sm-3">
-                <div class="modal-preview"><img src="images/FireShot/FireShot3.png" onclick="currentSlide(4)"></div>
+                <div class="modal-preview"><img src="assets/images/FireShot4.png"></div>
               </div>
             </div>
 
           </div>
 
         </div>
+
       </section>
 
-      <div class="col-xs-12 section_title" id="experience_section">Опыт работы<hr></div>
+      <div class="col-xs-12 section_title" id="experience_section">Experience<hr></div>
       <section class="col-xs-12 section">
         <table>
           <tr>
             <td>
-              <div class="work_date">Май 2017</div>
-              <div class="work_organization">Фриланс</div>
+              <div class="work_date">May 2017</div>
+              <div class="work_organization">Freelance</div>
             </td>
             <td>
-              <div class="work_position">Верстальщик</div>
-              <div class="work_duties">Верстка сайта для медицинского учреждения</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="work_date">Июнь 2014 - январь 2017</div>
-              <div class="work_organization">Шлюмберже, нефтяная сервисная компания</div>
-            </td>
-            <td>
-              <div class="work_position">инженер службы технической поддержки</div>
-              <div class="work_duties">Удаленная поддержка сотрудников компании, поиск и решение проблем на компьютерах пользователей</div>
+              <div class="work_position">Front-End Developer</div>
+              <div class="work_duties">Creating HTML, CSS and JS code for medical website</div>
             </td>
           </tr>
           <tr>
             <td>
-              <div class="work_date">Май 2014</div>
-              <div class="work_organization">ООО Везитакси</div>
+              <div class="work_date">June 2014 - January 2017</div>
+              <div class="work_organization">Schlumberger, oil and gas company</div>
             </td>
             <td>
-              <div class="work_position">системный администратор</div>
-              <div class="work_duties">Аппаратная и программная поддержка компьютеров предприятия</div>
+              <div class="work_position">Engineer</div>
+              <div class="work_duties">Remote support of company's users. Searching and resolving various computer issues</div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="work_date">May 2014</div>
+              <div class="work_organization">Taxi call center</div>
+            </td>
+            <td>
+              <div class="work_position">System administrator</div>
+              <div class="work_duties">Hardware and software support</div>
             </td>
           </tr>
         </table>
       </section>
 
-      <div class="col-xs-12 section_title" id="education_section">Высшее образование<hr></div>
+      <div class="col-xs-12 section_title" id="education_section">Higher education<hr></div>
       <section class="col-xs-12 section">
         <table>
           <tr>
             <td>
               <div class="learn_date">2008 - 2013</div>
-              <div class="learn_degree">Специалист</div>
+              <div class="learn_degree">Spesialist</div>
             </td>
             <td>
-              <div class="learn_organization">Тюменский государственный университет</div>
-              <div class="learn_description">Институт математики и компьютерных наук - Математическое обеспечение и администрирование информационных систем</div>
+              <div class="learn_organization">Tyumen State University</div>
+              <div class="learn_description">Institute of Mathematics and Computer Sciences - Mathematical Software and Information Systems Administration</div>
             </td>
           </tr>
         </table>
@@ -179,8 +180,8 @@
   <div class="hire">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-xs-12 left">Я ищу работу</div>
-        <div class="col-sm-6 col-xs-12 right" data-toggle="modal" data-target="#contacts"><span>Связаться со мной</span></div>
+        <div class="col-sm-6 col-xs-12 left">I'm looking for a job</div>
+        <div class="col-sm-6 col-xs-12 right" data-toggle="modal" data-target="#contacts"><span>Contact me</span></div>
       </div>
     </div>
   </div>
@@ -190,17 +191,17 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Связаться со мной</h4>
+          <h4 class="modal-title">Contact me</h4>
         </div>
         <div class="modal-body">
           <ul class="info">
             <li><span>Email</span><a href="mailto:mittralena@gmail.com">mittralena@gmail.com</a></li>
             <li><span>Telegram</span><a href="https://t.me/lucubratiuncula">@lucubratiuncula</a></li>
-            <li><span>Телефон</span>+7 919 925 0288</li>
+            <li><span>Phone</span>+7 919 925 0288</li>
           </ul>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -208,14 +209,16 @@
 
   <footer class="container">
     <div class="row">
-      <div class="col-sm-6 col-xs-12 footer_left">Создание сайта: <i>Алена Митрофанова</i></div>
+      <div class="col-sm-6 col-xs-12 footer_left">Сreated by <i>Alena Mitrofanova</i></div>
       <div class="col-sm-6 col-xs-12 footer_right">
         <a href="https://t.me/lucubratiuncula"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
         <a href="mailto:mittralena@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-        <a href="https://github.com/amitrofanova/amitrofanova.github.io"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/amitrofanova"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
       </div>
     </div>
   </footer>
+
+  <script src="assets/scripts/scripts.js"></script>
 
 </body>
 </html>
