add new section to portfolio

--- a/app/index.html
+++ b/app/index.html
@@ -79,11 +79,27 @@
       <div class="col-xs-12 section_title" id="portfolio_section">Портфолио<hr></div>
       <section class="col-xs-12 section portfolio">
         <div class="row preview">
+
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="preview-inner">
+            <div class="preview-inner portfolio__hospital">
+							<div class="preview-inner__img">
+								<img src="assets/images/FireShot1.png" alt="Частная поликлиника">
+							</div>
               <div class="description">
                 <div class="work">Частная поликлиника</div>
                 <div class="role">Верстка</div>
+              </div>
+            </div>
+          </div>
+
+					<div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="preview-inner portfolio__recipes">
+							<div class="preview-inner__img">
+								<img src="assets/images/Recipe book.png" alt="Книга рецептов">
+							</div>
+              <div class="description">
+                <div class="work">Книга рецептов</div>
+                <div class="role">Фронтэнд</div>
               </div>
             </div>
           </div>
@@ -118,6 +134,13 @@
           </div>
 
         </div>
+
+				<div id="recipes" class="modal">
+					<span class="close cursor">&times;</span>
+          <div class="modal-content">
+						<h1>Сайт для хранения рецептов</h1>
+					</div>
+				</div>
 
       </section>
 
