add list of used technologies

--- a/app/index.html
+++ b/app/index.html
@@ -138,7 +138,30 @@
 				<div id="recipes" class="modal">
 					<span class="close cursor">&times;</span>
           <div class="modal-content">
-						<h1>Сайт для хранения рецептов</h1>
+						<h1>Recipe book</h1>
+						Сайт для хранения кулинарных рецептов
+						<a class="portfolio__visit-btn" href="http://v91992vr.beget.tech" target="_blank">Посетить сайт</a>
+						<section  class="portfolio__section">
+							<h3 class="portfolio__section-title">Разработка</h3>
+							<div class="portfolio__section-text">
+								Технологии, использованные мной при создании сайта
+								<hr>
+							</div>
+							<ul class="portfolio__list">
+								<li>HTML5 - semantic</li>
+								<li>CSS3 - preprocessed with SASS</li>
+								<li>Responsive design</li>
+								<li>jQuery</li>
+								<li>AJAX</li>
+							</ul>
+						</section>
+						<h3>Ресурсы</h3>
+						<div class="portfolio__section-text">
+							Исходники проекта: <a href="https://gitlab.com/funnymitrofunny/recipe-book" target="_blank">https://gitlab.com/funnymitrofunny/recipe-book</a>
+						</div>
+						<div class="portfolio__section-text">
+							Сайт доступен по адресу <a href="http://v91992vr.beget.tech" target="_blank">http://v91992vr.beget.tech</a>
+						</div>
 					</div>
 				</div>
 
