add slider to recipes section

--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,8 @@
 						<h1>Recipe book</h1>
 						Сайт для хранения кулинарных рецептов
 						<a class="portfolio__visit-btn" href="http://v91992vr.beget.tech" target="_blank">Посетить сайт</a>
-						<section  class="portfolio__section">
+
+						<section class="portfolio__section">
 							<h3 class="portfolio__section-title">Разработка</h3>
 							<div class="portfolio__section-text">
 								Технологии, использованные мной при создании сайта
@@ -155,13 +156,29 @@
 								<li>AJAX</li>
 							</ul>
 						</section>
-						<h3>Ресурсы</h3>
-						<div class="portfolio__section-text">
-							Исходники проекта: <a href="https://gitlab.com/funnymitrofunny/recipe-book" target="_blank">https://gitlab.com/funnymitrofunny/recipe-book</a>
-						</div>
-						<div class="portfolio__section-text">
-							Сайт доступен по адресу <a href="http://v91992vr.beget.tech" target="_blank">http://v91992vr.beget.tech</a>
-						</div>
+
+						<section class="portfolio__section">
+							<h3 class="portfolio__section-title">Ресурсы</h3>
+							<div class="portfolio__section-text">
+								Исходники проекта:
+								<a href="https://gitlab.com/funnymitrofunny/recipe-book" target="_blank">https://gitlab.com/funnymitrofunny/recipe-book</a>
+							</div>
+							<div class="portfolio__section-text">
+								Сайт доступен по адресу
+								<a href="http://v91992vr.beget.tech" target="_blank">http://v91992vr.beget.tech</a>
+							</div>
+						</section>
+
+						<section class="portfolio__section">
+							<div class="portfolio__slider slider">
+								<img src="assets/images/home page.png" alt="" class="slider__item">
+								<img src="assets/images/dashboard.png" alt="" class="slider__item">
+								<img src="assets/images/dish group.png" alt="" class="slider__item">
+		            <div class="prev">&#10094;</div>
+		            <div class="next">&#10095;</div>
+							</div>
+						</section>
+
 					</div>
 				</div>
 
