--- a/app/index.html
+++ b/app/index.html
@@ -105,18 +105,45 @@
           </div>
         </div>
 
-        <div id="gallery" class="modal">
+        <div id="hospital" class="modal">
           <span class="close cursor">&times;</span>
           <div class="modal-content">
+						<h1>Центр здоровья</h1>
+						Сайт медицинского учреждения
+						<a class="portfolio__visit-btn" href="https://клиника-тоб.рф" target="_blank">Посетить сайт</a>
 
-            <img src="assets/images/FireShot1.png" class="slides">
-            <img src="assets/images/FireShot2.png" class="slides">
-            <img src="assets/images/FireShot3.png" class="slides">
-            <img src="assets/images/FireShot4.png" class="slides">
-            <div class="prev">&#10094;</div>
-            <div class="next">&#10095;</div>
+						<section class="portfolio__section">
+							<h3 class="portfolio__section-title">Разработка</h3>
+							<div class="portfolio__section-text">
+								Технологии, использованные при выполнении моей части работы:
+								<hr>
+							</div>
+							<ul class="portfolio__list">
+								<li>HTML5 - semantic</li>
+								<li>CSS3 - preprocessed with LESS</li>
+								<li>Responsive design</li>
+							</ul>
+						</section>
 
-						<div class="row preview">
+						<section class="portfolio__section">
+							<h3 class="portfolio__section-title">Ресурсы</h3>
+							<div class="portfolio__section-text">
+								Сайт доступен по адресу
+								<a href="https://клиника-тоб.рф" target="_blank">https://клиника-тоб.рф</a>
+							</div>
+						</section>
+
+						<section class="portfolio__section">
+							<div class="portfolio__slider slider slider__hospital">
+		            <img src="assets/images/FireShot1.png" class="slider__item">
+		            <img src="assets/images/FireShot2.png" class="slider__item">
+		            <img src="assets/images/FireShot3.png" class="slider__item">
+		            <img src="assets/images/FireShot4.png" class="slider__item">
+		            <div class="prev">&#10094;</div>
+		            <div class="next">&#10095;</div>
+							</div>
+						</section>
+						<!-- <div class="row preview">
               <div class="col-xs-12 col-sm-3">
                 <div class="modal-preview"><img src="assets/images/FireShot1.png"></div>
               </div>
@@ -129,7 +156,7 @@
               <div class="col-xs-12 col-sm-3">
                 <div class="modal-preview"><img src="assets/images/FireShot4.png"></div>
               </div>
-            </div>
+            </div> -->
 
           </div>
 
@@ -170,7 +197,7 @@
 						</section>
 
 						<section class="portfolio__section">
-							<div class="portfolio__slider slider">
+							<div class="portfolio__slider slider slider__recipes">
 								<img src="assets/images/home page.png" alt="" class="slider__item">
 								<img src="assets/images/dashboard.png" alt="" class="slider__item">
 								<img src="assets/images/dish group.png" alt="" class="slider__item">
