fix filename, indentation

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="preview-inner portfolio__recipes">
 						<div class="preview-inner__img">
-							<img src="assets/images/Recipe book.png" alt="Книга рецептов">
+							<img src="assets/images/home page.png" alt="Книга рецептов">
 						</div>
 						<div class="description">
 							<div class="work">Книга рецептов</div>
