--- a/app/index_en.html
+++ b/app/index_en.html
@@ -62,18 +62,18 @@
 		<section class="col-xs-12 section">
 			<div class="skill" text="HTML"><span id="html_skill"><span>HTML</span></span></div>
 			<div class="skill" text="CSS"><span id="css_skill"><span>CSS</span></span></div>
-			<div class="skill" text="jQuery"><span id="jquery_skill"><span>jQuery</span></span></div>
-			<div class="skill" text="Java Script"><span id="js_skill"><span>Java Script</span></span></div>
+			<div class="skill" text="JavaScript"><span id="js_skill"><span>JavaScript</span></span></div>
 			<div class="skill" text="Git"><span id="git_skill"><span>Git</span></span></div>
-			<div class="skill" text="Bootstrap"><span id="bs_skill"><span>Bootstrap</span></span></div>
-			<div class="skill" text="Photoshop"><span id="ps_skill"><span>Photoshop</span></span></div>
-			<div class="skill hidden-xs" text="Emmet"><span id="emmet_skill"><span>Emmet</span></span></div>
-			<div class="skill" text="Less"><span id="less_skill"><span>Less</span></span></div>
-			<div class="skill hidden-xs" text="PHP"><span id="php_skill"><span>PHP</span></span></div>
-			<div class="skill" text="Ajax"><span id="ajax_skill"><span>Ajax</span></span></div>
+			<div class="skill" text="Linux"><span id="linux_skill"><span>Linux</span></span></div>
+			<div class="skill" text="Python"><span id="php_skill"><span>Python</span></span></div>
+			<div class="skill" text="Flask"><span id="flask_skill"><span>Flask</span></span></div>
 			<div class="skill" text="SQL"><span id="sql_skill"><span>SQL</span></span></div>
-			<div class="skill" text="AngularJS"><span id="angular_skill"><span>AngularJS</span></span></div>
-			<div class="skill" text="JSON"><span id="json_skill"><span>JSON</span></span></div>
+			<div class="skill" text="BEM"><span id="bem_skill"><span>BEM</span></span></div>
+			<div class="skill" text="SASS/LESS"><span id="css_preproc_skill"><span>SASS/LESS</span></span></div>
+			<div class="skill hidden-xs" text="Webpack"><span id="webpack_skill"><span>Webpack</span></span></div>
+			<div class="skill" text="Photoshop"><span id="ps_skill"><span>Photoshop</span></span></div>
+			<div class="skill" text="jQuery"><span id="jquery_skill"><span>jQuery</span></span></div>
+			<div class="skill hidden-xs" text="Bootstrap"><span id="bs_skill"><span>Bootstrap</span></span></div>
 		</section>
 
 		<!-- TODO: slides for mobile -->
