--- a/app/index_en.html
+++ b/app/index_en.html
@@ -65,13 +65,13 @@
 			<div class="skill" text="JavaScript"><span id="js_skill"><span>JavaScript</span></span></div>
 			<div class="skill" text="Git"><span id="git_skill"><span>Git</span></span></div>
 			<div class="skill" text="Linux"><span id="linux_skill"><span>Linux</span></span></div>
-			<div class="skill" text="Python"><span id="php_skill"><span>Python</span></span></div>
+			<div class="skill" text="Python"><span id="python_skill"><span>Python</span></span></div>
 			<div class="skill" text="Flask"><span id="flask_skill"><span>Flask</span></span></div>
 			<div class="skill" text="SQL"><span id="sql_skill"><span>SQL</span></span></div>
 			<div class="skill" text="BEM"><span id="bem_skill"><span>BEM</span></span></div>
 			<div class="skill" text="SASS/LESS"><span id="css_preproc_skill"><span>SASS/LESS</span></span></div>
-			<div class="skill hidden-xs" text="Webpack"><span id="webpack_skill"><span>Webpack</span></span></div>
-			<div class="skill" text="Photoshop"><span id="ps_skill"><span>Photoshop</span></span></div>
+			<div class="skill" text="Webpack"><span id="webpack_skill"><span>Webpack</span></span></div>
+			<div class="skill hidden-xs" text="Photoshop"><span id="ps_skill"><span>Photoshop</span></span></div>
 			<div class="skill" text="jQuery"><span id="jquery_skill"><span>jQuery</span></span></div>
 			<div class="skill hidden-xs" text="Bootstrap"><span id="bs_skill"><span>Bootstrap</span></span></div>
 		</section>
@@ -207,6 +207,17 @@
 			<table>
 				<tr>
 					<td>
+						<div class="work_date">May 2018 - august 2018</div>
+						<div class="work_organization">Flowwow</div>
+					</td>
+					<td>
+						<div class="work_position">Frontend developer</div>
+						<div class="work_duties">Frontend</div>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
 						<div class="work_date">May 2017</div>
 						<div class="work_organization">Freelance</div>
 					</td>
@@ -215,6 +226,7 @@
 						<div class="work_duties">Creating HTML, CSS and JS code for medical website</div>
 					</td>
 				</tr>
+
 				<tr>
 					<td>
 						<div class="work_date">June 2014 - January 2017</div>
@@ -225,6 +237,7 @@
 						<div class="work_duties">Remote support of company's users. Searching and resolving various computer issues</div>
 					</td>
 				</tr>
+
 				<tr>
 					<td>
 						<div class="work_date">May 2014</div>
@@ -273,6 +286,7 @@
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h4 class="modal-title">Contact me</h4>
 			</div>
+
 			<div class="modal-body">
 				<ul class="info">
 					<li><span>Email</span><a href="mailto:mittralena@gmail.com">mittralena@gmail.com</a></li>
@@ -280,6 +294,7 @@
 					<li><span>Phone</span>+7 919 925 0288</li>
 				</ul>
 			</div>
+
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 			</div>
