--- a/app/index.html
+++ b/app/index.html
@@ -202,6 +202,17 @@
 			<table>
 				<tr>
 					<td>
+						<div class="work_date">Май 2018 - август 2018</div>
+						<div class="work_organization">Flowwow</div>
+					</td>
+					<td>
+						<div class="work_position">Frontend developer</div>
+						<div class="work_duties">Верстка страниц цветочного агрегатора, JavaScript</div>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
 						<div class="work_date">Май 2017</div>
 						<div class="work_organization">Фриланс</div>
 					</td>
@@ -210,6 +221,7 @@
 						<div class="work_duties">Верстка сайта для медицинского учреждения</div>
 					</td>
 				</tr>
+
 				<tr>
 					<td>
 						<div class="work_date">Июнь 2014 - январь 2017</div>
@@ -220,13 +232,14 @@
 						<div class="work_duties">Удаленная поддержка сотрудников компании, поиск и решение проблем на компьютерах пользователей</div>
 					</td>
 				</tr>
+
 				<tr>
 					<td>
 						<div class="work_date">Май 2014</div>
 						<div class="work_organization">ООО Везитакси</div>
 					</td>
 					<td>
-						<div class="work_position">системный администратор</div>
+						<div class="work_position">Системный администратор</div>
 						<div class="work_duties">Аппаратная и программная поддержка компьютеров предприятия</div>
 					</td>
 				</tr>
@@ -268,6 +281,7 @@
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h4 class="modal-title">Связаться со мной</h4>
 			</div>
+
 			<div class="modal-body">
 				<ul class="info">
 					<li><span>Email</span><a href="mailto:mittralena@gmail.com">mittralena@gmail.com</a></li>
@@ -275,6 +289,7 @@
 					<li><span>Телефон</span>+7 919 925 0288</li>
 				</ul>
 			</div>
+			
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
 			</div>
