--- a/app/index_en.html
+++ b/app/index_en.html
@@ -101,11 +101,22 @@
 						</div>
 						<div class="description">
 							<div class="work">Recipe book</div>
-							<div class="role">HTML, CSS</div>
+							<div class="role">HTML, CSS, jQuery</div>
 						</div>
 					</div>
 				</div>
 
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="preview-inner portfolio__recipes">
+						<div class="preview-inner__img">
+							<img src="assets/images/cookbook.png" alt="cookbook">
+						</div>
+						<div class="description">
+							<div class="work">Recipe book</div>
+							<div class="role">Fullstack</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
 
@@ -196,10 +207,57 @@
 							<div class="next">&#10095;</div>
 						</div>
 					</section>
-
 				</div>
 			</div>
 
+			<div id="cookbook" class="modal">
+				<span class="close cursor">&times;</span>
+				<div class="modal-content">
+					<h1>Recipe book</h1>
+					Website for storing cooking recipes
+					<a class="portfolio__visit-btn" href="https://c00kbook.herokuapp.com/demo" target="_blank">
+						Visit website
+					</a>
+
+					<section class="portfolio__section">
+						<h3 class="portfolio__section-title">Development</h3>
+						<div class="portfolio__section-text">
+							Technologies I used while working on this project:
+							<hr>
+						</div>
+						<ul class="portfolio__list">
+							<li>HTML5 - semantic</li>
+							<li>CSS3 - preprocessed with SASS</li>
+							<li>Responsive design</li>
+							<li>Flask</li>
+							<li>PostgreSQL</li>
+						</ul>
+					</section>
+
+					<section class="portfolio__section">
+						<h3 class="portfolio__section-title">Resources</h3>
+						<div class="portfolio__section-text">
+							Access the project's source on
+							<a href="https://github.com/amitrofanova/recipes" target="_blank">GitHub</a>
+						</div>
+						<div class="portfolio__section-text">
+							The project is online at
+							<a href="https://c00kbook.herokuapp.com/demo" target="_blank">https://c00kbook.herokuapp.com/demo</a>
+						</div>
+					</section>
+
+					<section class="portfolio__section">
+						<div class="portfolio__slider slider slider__recipes">
+							<img src="assets/images/cookbook.png" alt="portfolio_image" class="slider__item">
+							<img src="assets/images/cookbook2.png" alt="portfolio_image" class="slider__item">
+							<img src="assets/images/cookbook3.png" alt="portfolio_image" class="slider__item">
+							<img src="assets/images/cookbook4.png" alt="portfolio_image" class="slider__item">
+							<div class="prev">&#10094;</div>
+							<div class="next">&#10095;</div>
+						</div>
+					</section>
+				</div>
+			</div>
 		</section>
 
 		<div class="col-xs-12 section_title" id="experience_section">Experience<hr></div>
